--- a/vermontcomplexsystems-foundation.rw8/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Contents.plist
@@ -11290,7 +11290,7 @@
 					<key>page64 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-10-08T14:45:30Z</date>
+						<date>2019-10-09T15:58:24Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -11334,6 +11334,16 @@
 								</data>
 								<key>Size</key>
 								<integer>68310</integer>
+							</dict>
+							<key>files/stacks-image-1eb6b30.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								OUbC3/O+Hzkh
+								wcGqgjSFYQ==
+								</data>
+								<key>Size</key>
+								<integer>6660</integer>
 							</dict>
 							<key>files/stacks-image-28ec906-332x500.jpg</key>
 							<dict>
@@ -11469,31 +11479,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ipeayjpYKjGX
-								hM7WPRYayw==
+								EOTP9t4qHlFf
+								O5dKN/zMAg==
 								</data>
 								<key>Size</key>
-								<integer>185424</integer>
+								<integer>190655</integer>
 							</dict>
 							<key>files/stacks_page_page64.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								km9/nzV5imll
-								E5zbqBXQ5w==
+								U1uV9MWwegbB
+								O5y1Zqt4XA==
 								</data>
 								<key>Size</key>
-								<integer>25780</integer>
+								<integer>25962</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								1s3QG9iC0XnI
-								toFjOecvOw==
+								UUZdyMP5kiin
+								SBOI0UdH/w==
 								</data>
 								<key>Size</key>
-								<integer>114296</integer>
+								<integer>117836</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -14066,7 +14076,7 @@
 					<key>page79 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-10-08T14:45:30Z</date>
+						<date>2019-10-09T15:58:24Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -14120,6 +14130,16 @@
 								</data>
 								<key>Size</key>
 								<integer>39542</integer>
+							</dict>
+							<key>files/stacks-image-1eb6b30.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								OUbC3/O+Hzkh
+								wcGqgjSFYQ==
+								</data>
+								<key>Size</key>
+								<integer>6660</integer>
 							</dict>
 							<key>files/stacks-image-28ec906-332x500.jpg</key>
 							<dict>
@@ -14265,31 +14285,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Jc79uxijrSK2
-								jJNupXHgrw==
+								vzdTlg4HWPgO
+								6BwyeSYlWA==
 								</data>
 								<key>Size</key>
-								<integer>166763</integer>
+								<integer>171994</integer>
 							</dict>
 							<key>files/stacks_page_page79.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								oglyQ1kEShFO
-								LFO+LNKDZQ==
+								bkywWBTV4/qe
+								NYFD0Cl1Ng==
 								</data>
 								<key>Size</key>
-								<integer>26508</integer>
+								<integer>26690</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								6DSaiQTMeLHQ
-								mSZPaK9Ukw==
+								w3Bw0/pvU2KU
+								0WVnJQlaQg==
 								</data>
 								<key>Size</key>
-								<integer>100129</integer>
+								<integer>103669</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -15832,7 +15852,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-10-09T14:04:50Z</date>
+						<date>2019-10-09T15:58:24Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -15861,11 +15881,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								XhNV0dwaYfhO
-								xESw1B+5iQ==
+								/0lDSeNss+dI
+								q5UyZQPRyw==
 								</data>
 								<key>Size</key>
-								<integer>5984</integer>
+								<integer>5952</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -15944,7 +15964,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-10-09T14:04:50Z</date>
+						<date>2019-10-09T15:58:24Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -17023,11 +17043,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								cBkcoqp9FdPG
-								rPWW6ZDeIA==
+								opoFlOQ1q/FJ
+								dmaAc815VQ==
 								</data>
 								<key>Size</key>
-								<integer>4681</integer>
+								<integer>3904</integer>
 							</dict>
 							<key>vein.min.js</key>
 							<dict>
@@ -17183,8 +17203,8 @@
 				QzUtOTVGQi1EM0QyMkM3QkMxRjFfEDRQREYgRm9yIFBh
 				cnRpY2lwYW50cyBTT1MgU3ltcG9zaXVtIDIwMTggc2No
 				ZWR1bGUucGRmXxAkN0E2RjlFQ0QtRkMyMi00ODg0LUI5
-				MUUtNTdCOUE3NkRCMzEz0kcLSElXTlMudGltZSNBwacT
-				oisE7oAO0iIjS0xWTlNEYXRloksn0wkKC05QUqFPgBCh
+				MUUtNTdCOUE3NkRCMzEz0kcLSElXTlMudGltZSNBwacd
+				kXGfNIAO0iIjS0xWTlNEYXRloksn0wkKC05QUqFPgBCh
 				UYARgBJfEC1zZnRwOi9jbXBseHN5cy53My51dm0uZWR1
 				L3d3dy1yb290L3RlbXBsYXRlcnkI0iIjVldfEBNOU011
 				dGFibGVEaWN0aW9uYXJ5o1ZYJ1xOU0RpY3Rpb25hcnnS
@@ -17194,14 +17214,14 @@
 				QkZFRC1FNkI4QzBENDdDOTNfECNQRkQgZm9yIHBhcnRp
 				Y2lwYW50cyBIV0IgQWdlbmRhLnBkZl8QJDVGODA2OEQ1
 				LTA0ODItNDEwMi1BNzdBLTE4NTZFRjA5RkFFRdJHC2xJ
-				I0HBpxOiKwV1gA7TCQoLb3FSoXCAGqFRgBGAEl8QLXNm
+				I0HBpx2RcZ/DgA7TCQoLb3FSoXCAGqFRgBGAEl8QLXNm
 				dHA6L2NtcGx4c3lzLnczLnV2bS5lZHUvd3d3LXJvb3Qv
 				dGVtcGxhdGVyedoxMgszNDUTNjc4OXc7Ojp7fH1+fwiA
 				IoATgACAAIAggB2AHIAfgB5fECQzMTFDQkREMi05MkI3
 				LTQwMTgtQjA5OC00OEYyOEUwRDA5QUZfEBxvY3RvcHVz
 				X2ljb25fdHJhbnNwYXJlbnQucG5nXxAkMDNBNEMzM0It
 				NjY2MC00MzEyLUFCQjEtREREMTc4NUZGOTEz0kcLhEkj
-				QcGnE6IrBbiADtMJCguHiVKhiIAhoVGAEYASXxAtc2Z0
+				QcGnHZFxn/WADtMJCguHiVKhiIAhoVGAEYASXxAtc2Z0
 				cDovY21wbHhzeXMudzMudXZtLmVkdS93d3ctcm9vdC90
 				ZW1wbGF0ZXJ5XxBuL3Zhci9mb2xkZXJzLzY2L2hfbnZu
 				eDQ5NWZzX3AwbG14YjdndHBwNDAwMDBncS9UL2NvbS5y
@@ -17210,8 +17230,8 @@
 				ODmQOzo6lJWWl5gIgCqAE4AAgACAKIAlgCSAJ4AmXxAk
 				RUI3QTAwQkEtMjRFMy00NjhCLUI0NTYtOUMyMzdCODBE
 				MEVDW2Zhdmljb24uaWNvXxAkQTU0NUQzNzUtMUI2Qi00
-				RTkzLUJCNTctMTI0RjU3MTIwRkUy0kcLnUkjQcGnE6Ir
-				BdGADtMJCgugolKhoYApoVGAEYASXxAtc2Z0cDovY21w
+				RTkzLUJCNTctMTI0RjU3MTIwRkUy0kcLnUkjQcGnHZFx
+				oBeADtMJCgugolKhoYApoVGAEYASXxAtc2Z0cDovY21w
 				bHhzeXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0
 				ZXJ5XxBdL3Zhci9mb2xkZXJzLzY2L2hfbnZueDQ5NWZz
 				X3AwbG14YjdndHBwNDAwMDBncS9UL2NvbS5yZWFsbWFj
@@ -17220,7 +17240,7 @@
 				LYAsgC+ALl8QJDQxMTFGQjUyLUEyMkEtNEQ2NS04Njky
 				LUJFNjMwRTZEQ0E2Q18QFGFwcGxlLXRvdWNoLWljb24u
 				cG5nXxAkQUI1MEZENTItQTU0RS00RjIyLTk5NEQtRTE1
-				QTdFRjIyNEEy0kcLtkkjQcGnE6IrBeqADtMJCgu5u1Kh
+				QTdFRjIyNEEy0kcLtkkjQcGnHZFxoDiADtMJCgu5u1Kh
 				uoAxoVGAEYASXxAtc2Z0cDovY21wbHhzeXMudzMudXZt
 				LmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5XxBmL3Zhci9m
 				b2xkZXJzLzY2L2hfbnZueDQ5NWZzX3AwbG14YjdndHBw
