--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/06-ALIFE-2020/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/06-ALIFE-2020/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-10-08T14:45:30Z</date>
+						<date>2019-10-09T15:58:24Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -79,6 +79,16 @@
 								</data>
 								<key>Size</key>
 								<integer>68310</integer>
+							</dict>
+							<key>files/stacks-image-1eb6b30.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								OUbC3/O+Hzkh
+								wcGqgjSFYQ==
+								</data>
+								<key>Size</key>
+								<integer>6660</integer>
 							</dict>
 							<key>files/stacks-image-28ec906-332x500.jpg</key>
 							<dict>
@@ -214,31 +224,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ipeayjpYKjGX
-								hM7WPRYayw==
+								EOTP9t4qHlFf
+								O5dKN/zMAg==
 								</data>
 								<key>Size</key>
-								<integer>185424</integer>
+								<integer>190655</integer>
 							</dict>
 							<key>files/stacks_page_page64.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								km9/nzV5imll
-								E5zbqBXQ5w==
+								U1uV9MWwegbB
+								O5y1Zqt4XA==
 								</data>
 								<key>Size</key>
-								<integer>25780</integer>
+								<integer>25962</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								1s3QG9iC0XnI
-								toFjOecvOw==
+								UUZdyMP5kiin
+								SBOI0UdH/w==
 								</data>
 								<key>Size</key>
-								<integer>114296</integer>
+								<integer>117836</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
