jane photo change
jane photo change

--- a/vermontcomplexsystems-foundation.rw8/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Contents.plist
@@ -12642,7 +12642,7 @@
 					<key>page70 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-10-09T14:33:38Z</date>
+						<date>2019-10-09T16:38:44Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -12716,6 +12716,26 @@
 								</data>
 								<key>Size</key>
 								<integer>68310</integer>
+							</dict>
+							<key>files/stacks-image-0bff3ec-400x400.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								fMLDjsI3dgZH
+								q3wnNP4xcg==
+								</data>
+								<key>Size</key>
+								<integer>49606</integer>
+							</dict>
+							<key>files/stacks-image-0bff3ec-400x400@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								qm6mHRTa8kY/
+								D3O7SX+MVQ==
+								</data>
+								<key>Size</key>
+								<integer>92215</integer>
 							</dict>
 							<key>files/stacks-image-0fbca84-400x400.jpg</key>
 							<dict>
@@ -12846,16 +12866,6 @@
 								</data>
 								<key>Size</key>
 								<integer>12393</integer>
-							</dict>
-							<key>files/stacks-image-804d650-400x400.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								jCIM8+iW96Xh
-								98eI45iaVw==
-								</data>
-								<key>Size</key>
-								<integer>68272</integer>
 							</dict>
 							<key>files/stacks-image-972d40d-400x400.jpg</key>
 							<dict>
@@ -13001,11 +13011,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								tWP3lXTuumXB
-								DqzFzh3nyQ==
+								N3k3pUbGkvWG
+								3cBFsT5fLw==
 								</data>
 								<key>Size</key>
-								<integer>98483</integer>
+								<integer>98581</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -13018,7 +13028,7 @@
 					<key>page71 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-08-19T16:53:34Z</date>
+						<date>2019-10-09T16:10:56Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -13147,11 +13157,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								mRMJerVoyDHB
-								xG0VJ8JPsQ==
+								n315OJvbSIrX
+								Dlw7nnWRIA==
 								</data>
 								<key>Size</key>
-								<integer>48294</integer>
+								<integer>48863</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -15852,7 +15862,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-10-09T15:58:24Z</date>
+						<date>2019-10-09T16:38:44Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -15881,11 +15891,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								/0lDSeNss+dI
-								q5UyZQPRyw==
+								mJCtj/zJ63mz
+								DwRQBxp9cQ==
 								</data>
 								<key>Size</key>
-								<integer>5952</integer>
+								<integer>5984</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -15964,7 +15974,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-10-09T15:58:24Z</date>
+						<date>2019-10-09T16:38:44Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -17043,11 +17053,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								opoFlOQ1q/FJ
-								dmaAc815VQ==
+								4jYH5jbdW8kW
+								0Lu1eaK9Nw==
 								</data>
 								<key>Size</key>
-								<integer>3904</integer>
+								<integer>4681</integer>
 							</dict>
 							<key>vein.min.js</key>
 							<dict>
@@ -17203,8 +17213,8 @@
 				QzUtOTVGQi1EM0QyMkM3QkMxRjFfEDRQREYgRm9yIFBh
 				cnRpY2lwYW50cyBTT1MgU3ltcG9zaXVtIDIwMTggc2No
 				ZWR1bGUucGRmXxAkN0E2RjlFQ0QtRkMyMi00ODg0LUI5
-				MUUtNTdCOUE3NkRCMzEz0kcLSElXTlMudGltZSNBwacd
-				kXGfNIAO0iIjS0xWTlNEYXRloksn0wkKC05QUqFPgBCh
+				MUUtNTdCOUE3NkRCMzEz0kcLSElXTlMudGltZSNBwaci
+				SxJ/1IAO0iIjS0xWTlNEYXRloksn0wkKC05QUqFPgBCh
 				UYARgBJfEC1zZnRwOi9jbXBseHN5cy53My51dm0uZWR1
 				L3d3dy1yb290L3RlbXBsYXRlcnkI0iIjVldfEBNOU011
 				dGFibGVEaWN0aW9uYXJ5o1ZYJ1xOU0RpY3Rpb25hcnnS
@@ -17214,14 +17224,14 @@
 				QkZFRC1FNkI4QzBENDdDOTNfECNQRkQgZm9yIHBhcnRp
 				Y2lwYW50cyBIV0IgQWdlbmRhLnBkZl8QJDVGODA2OEQ1
 				LTA0ODItNDEwMi1BNzdBLTE4NTZFRjA5RkFFRdJHC2xJ
-				I0HBpx2RcZ/DgA7TCQoLb3FSoXCAGqFRgBGAEl8QLXNm
+				I0HBpyJLEoDpgA7TCQoLb3FSoXCAGqFRgBGAEl8QLXNm
 				dHA6L2NtcGx4c3lzLnczLnV2bS5lZHUvd3d3LXJvb3Qv
 				dGVtcGxhdGVyedoxMgszNDUTNjc4OXc7Ojp7fH1+fwiA
 				IoATgACAAIAggB2AHIAfgB5fECQzMTFDQkREMi05MkI3
 				LTQwMTgtQjA5OC00OEYyOEUwRDA5QUZfEBxvY3RvcHVz
 				X2ljb25fdHJhbnNwYXJlbnQucG5nXxAkMDNBNEMzM0It
 				NjY2MC00MzEyLUFCQjEtREREMTc4NUZGOTEz0kcLhEkj
-				QcGnHZFxn/WADtMJCguHiVKhiIAhoVGAEYASXxAtc2Z0
+				QcGnIksSgROADtMJCguHiVKhiIAhoVGAEYASXxAtc2Z0
 				cDovY21wbHhzeXMudzMudXZtLmVkdS93d3ctcm9vdC90
 				ZW1wbGF0ZXJ5XxBuL3Zhci9mb2xkZXJzLzY2L2hfbnZu
 				eDQ5NWZzX3AwbG14YjdndHBwNDAwMDBncS9UL2NvbS5y
@@ -17230,8 +17240,8 @@
 				ODmQOzo6lJWWl5gIgCqAE4AAgACAKIAlgCSAJ4AmXxAk
 				RUI3QTAwQkEtMjRFMy00NjhCLUI0NTYtOUMyMzdCODBE
 				MEVDW2Zhdmljb24uaWNvXxAkQTU0NUQzNzUtMUI2Qi00
-				RTkzLUJCNTctMTI0RjU3MTIwRkUy0kcLnUkjQcGnHZFx
-				oBeADtMJCgugolKhoYApoVGAEYASXxAtc2Z0cDovY21w
+				RTkzLUJCNTctMTI0RjU3MTIwRkUy0kcLnUkjQcGnIksS
+				gSyADtMJCgugolKhoYApoVGAEYASXxAtc2Z0cDovY21w
 				bHhzeXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0
 				ZXJ5XxBdL3Zhci9mb2xkZXJzLzY2L2hfbnZueDQ5NWZz
 				X3AwbG14YjdndHBwNDAwMDBncS9UL2NvbS5yZWFsbWFj
@@ -17240,7 +17250,7 @@
 				LYAsgC+ALl8QJDQxMTFGQjUyLUEyMkEtNEQ2NS04Njky
 				LUJFNjMwRTZEQ0E2Q18QFGFwcGxlLXRvdWNoLWljb24u
 				cG5nXxAkQUI1MEZENTItQTU0RS00RjIyLTk5NEQtRTE1
-				QTdFRjIyNEEy0kcLtkkjQcGnHZFxoDiADtMJCgu5u1Kh
+				QTdFRjIyNEEy0kcLtkkjQcGnIksSgYCADtMJCgu5u1Kh
 				uoAxoVGAEYASXxAtc2Z0cDovY21wbHhzeXMudzMudXZt
 				LmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5XxBmL3Zhci9m
 				b2xkZXJzLzY2L2hfbnZueDQ5NWZzX3AwbG14YjdndHBw
