--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/16-Science-Olympiad/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/16-Science-Olympiad/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-08-19T16:53:34Z</date>
+						<date>2019-10-09T16:10:56Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -162,11 +162,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								mRMJerVoyDHB
-								xG0VJ8JPsQ==
+								n315OJvbSIrX
+								Dlw7nnWRIA==
 								</data>
 								<key>Size</key>
-								<integer>48294</integer>
+								<integer>48863</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
