--- a/vermontcomplexsystems-foundation.rw8/Pages/08-Partner/ChildPages/1-MassMutual-Center-of-Excellence/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/08-Partner/ChildPages/1-MassMutual-Center-of-Excellence/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-10-09T14:33:38Z</date>
+						<date>2019-10-09T16:38:44Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -107,6 +107,26 @@
 								</data>
 								<key>Size</key>
 								<integer>68310</integer>
+							</dict>
+							<key>files/stacks-image-0bff3ec-400x400.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								fMLDjsI3dgZH
+								q3wnNP4xcg==
+								</data>
+								<key>Size</key>
+								<integer>49606</integer>
+							</dict>
+							<key>files/stacks-image-0bff3ec-400x400@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								qm6mHRTa8kY/
+								D3O7SX+MVQ==
+								</data>
+								<key>Size</key>
+								<integer>92215</integer>
 							</dict>
 							<key>files/stacks-image-0fbca84-400x400.jpg</key>
 							<dict>
@@ -237,16 +257,6 @@
 								</data>
 								<key>Size</key>
 								<integer>12393</integer>
-							</dict>
-							<key>files/stacks-image-804d650-400x400.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								jCIM8+iW96Xh
-								98eI45iaVw==
-								</data>
-								<key>Size</key>
-								<integer>68272</integer>
 							</dict>
 							<key>files/stacks-image-972d40d-400x400.jpg</key>
 							<dict>
@@ -392,11 +402,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								tWP3lXTuumXB
-								DqzFzh3nyQ==
+								N3k3pUbGkvWG
+								3cBFsT5fLw==
 								</data>
 								<key>Size</key>
-								<integer>98483</integer>
+								<integer>98581</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
