--- a/vermontcomplexsystems-foundation.rw8/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Contents.plist
@@ -6480,7 +6480,7 @@
 					<key>page49 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-09-23T15:54:17Z</date>
+						<date>2019-10-21T14:39:34Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -6929,11 +6929,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								tnkTOaWK9XwO
-								4cyQswVcdQ==
+								21lF/+UbJMco
+								X8jO69oR5A==
 								</data>
 								<key>Size</key>
-								<integer>153644</integer>
+								<integer>153652</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -11290,7 +11290,7 @@
 					<key>page64 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-10-09T15:58:24Z</date>
+						<date>2019-10-21T14:59:54Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -11334,6 +11334,26 @@
 								</data>
 								<key>Size</key>
 								<integer>68310</integer>
+							</dict>
+							<key>files/stacks-image-19dca8a-350x450.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								P8tV4jQfCCzA
+								TfAh4lNIsw==
+								</data>
+								<key>Size</key>
+								<integer>35983</integer>
+							</dict>
+							<key>files/stacks-image-19dca8a-350x450@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								5BdesvlayYZG
+								prgxQfHz2g==
+								</data>
+								<key>Size</key>
+								<integer>61504</integer>
 							</dict>
 							<key>files/stacks-image-1eb6b30.jpg</key>
 							<dict>
@@ -11384,6 +11404,26 @@
 								</data>
 								<key>Size</key>
 								<integer>76975</integer>
+							</dict>
+							<key>files/stacks-image-4b4af78-350x450.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								P8tV4jQfCCzA
+								TfAh4lNIsw==
+								</data>
+								<key>Size</key>
+								<integer>35983</integer>
+							</dict>
+							<key>files/stacks-image-4b4af78-350x450@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								5BdesvlayYZG
+								prgxQfHz2g==
+								</data>
+								<key>Size</key>
+								<integer>61504</integer>
 							</dict>
 							<key>files/stacks-image-5cba074-350x450.jpg</key>
 							<dict>
@@ -11479,31 +11519,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								EOTP9t4qHlFf
-								O5dKN/zMAg==
+								874rtjiUigSf
+								GSYzxsn45w==
 								</data>
 								<key>Size</key>
-								<integer>190655</integer>
+								<integer>198216</integer>
 							</dict>
 							<key>files/stacks_page_page64.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								U1uV9MWwegbB
-								O5y1Zqt4XA==
+								S2GtCNhZhV7R
+								WnEIo01FZg==
 								</data>
 								<key>Size</key>
-								<integer>25962</integer>
+								<integer>26144</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								UUZdyMP5kiin
-								SBOI0UdH/w==
+								4F6ywKE9KOQp
+								SKFH56cFdg==
 								</data>
 								<key>Size</key>
-								<integer>117836</integer>
+								<integer>124843</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -13028,7 +13068,7 @@
 					<key>page71 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-10-09T16:10:56Z</date>
+						<date>2019-10-21T14:51:51Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -13042,6 +13082,16 @@
 								</data>
 								<key>Size</key>
 								<integer>15641164</integer>
+							</dict>
+							<key>files/stacks-image-01e6c7b-250x124.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								xOkCGQePdP5m
+								8H5babBsyQ==
+								</data>
+								<key>Size</key>
+								<integer>10941</integer>
 							</dict>
 							<key>files/stacks-image-67d0f14-248x224.jpg</key>
 							<dict>
@@ -13137,11 +13187,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								KK81nEdMv24y
-								syXraUBPhQ==
+								FCej/7Zf94jB
+								uyWBgeJEaA==
 								</data>
 								<key>Size</key>
-								<integer>101927</integer>
+								<integer>108257</integer>
 							</dict>
 							<key>files/stacks_page_page71.js</key>
 							<dict>
@@ -13157,11 +13207,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								n315OJvbSIrX
-								Dlw7nnWRIA==
+								2EWCRsrdJWMb
+								Cq4Ku9l78w==
 								</data>
 								<key>Size</key>
-								<integer>48863</integer>
+								<integer>53399</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -13694,7 +13744,7 @@
 					<key>page77 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-10-07T19:01:56Z</date>
+						<date>2019-10-21T14:59:54Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -13739,6 +13789,26 @@
 								<key>Size</key>
 								<integer>68310</integer>
 							</dict>
+							<key>files/stacks-image-19dca8a-350x450.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								P8tV4jQfCCzA
+								TfAh4lNIsw==
+								</data>
+								<key>Size</key>
+								<integer>35983</integer>
+							</dict>
+							<key>files/stacks-image-19dca8a-350x450@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								5BdesvlayYZG
+								prgxQfHz2g==
+								</data>
+								<key>Size</key>
+								<integer>61504</integer>
+							</dict>
 							<key>files/stacks-image-35e7390-350x450.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -13748,6 +13818,26 @@
 								</data>
 								<key>Size</key>
 								<integer>32936</integer>
+							</dict>
+							<key>files/stacks-image-4b4af78-350x450.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								P8tV4jQfCCzA
+								TfAh4lNIsw==
+								</data>
+								<key>Size</key>
+								<integer>35983</integer>
+							</dict>
+							<key>files/stacks-image-4b4af78-350x450@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								5BdesvlayYZG
+								prgxQfHz2g==
+								</data>
+								<key>Size</key>
+								<integer>61504</integer>
 							</dict>
 							<key>files/stacks-image-5cba074-350x450.jpg</key>
 							<dict>
@@ -13823,31 +13913,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								mdhc1UCO33ac
-								yYMg2ewoUA==
+								GcWjsKEOTAhe
+								+MAzIG2JGg==
 								</data>
 								<key>Size</key>
-								<integer>142432</integer>
+								<integer>148805</integer>
 							</dict>
 							<key>files/stacks_page_page77.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								abi2Ok8LNVwf
-								6Um/zkWBfA==
+								TX1L0bZu4ujb
+								FGPmkuvOJA==
 								</data>
 								<key>Size</key>
-								<integer>24870</integer>
+								<integer>25052</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								Y1CQt3zvInVh
-								Bnz90306ug==
+								6V6fOMK9gxHp
+								9+t69L5BnA==
 								</data>
 								<key>Size</key>
-								<integer>68737</integer>
+								<integer>75174</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -15862,7 +15952,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-10-09T16:38:44Z</date>
+						<date>2019-10-21T14:51:51Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -15891,11 +15981,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								mJCtj/zJ63mz
-								DwRQBxp9cQ==
+								9R/fDUV2GGQg
+								lsP2FRLx0g==
 								</data>
 								<key>Size</key>
-								<integer>5984</integer>
+								<integer>6016</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -15974,7 +16064,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-10-09T16:38:44Z</date>
+						<date>2019-10-21T14:47:36Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -17053,8 +17143,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								4jYH5jbdW8kW
-								0Lu1eaK9Nw==
+								t17dRJsW9MBw
+								2xRVCdYGdg==
 								</data>
 								<key>Size</key>
 								<integer>4681</integer>
@@ -17213,8 +17303,8 @@
 				QzUtOTVGQi1EM0QyMkM3QkMxRjFfEDRQREYgRm9yIFBh
 				cnRpY2lwYW50cyBTT1MgU3ltcG9zaXVtIDIwMTggc2No
 				ZWR1bGUucGRmXxAkN0E2RjlFQ0QtRkMyMi00ODg0LUI5
-				MUUtNTdCOUE3NkRCMzEz0kcLSElXTlMudGltZSNBwaci
-				SxJ/1IAO0iIjS0xWTlNEYXRloksn0wkKC05QUqFPgBCh
+				MUUtNTdCOUE3NkRCMzEz0kcLSElXTlMudGltZSNBwa7/
+				t35BJYAO0iIjS0xWTlNEYXRloksn0wkKC05QUqFPgBCh
 				UYARgBJfEC1zZnRwOi9jbXBseHN5cy53My51dm0uZWR1
 				L3d3dy1yb290L3RlbXBsYXRlcnkI0iIjVldfEBNOU011
 				dGFibGVEaWN0aW9uYXJ5o1ZYJ1xOU0RpY3Rpb25hcnnS
@@ -17224,14 +17314,14 @@
 				QkZFRC1FNkI4QzBENDdDOTNfECNQRkQgZm9yIHBhcnRp
 				Y2lwYW50cyBIV0IgQWdlbmRhLnBkZl8QJDVGODA2OEQ1
 				LTA0ODItNDEwMi1BNzdBLTE4NTZFRjA5RkFFRdJHC2xJ
-				I0HBpyJLEoDpgA7TCQoLb3FSoXCAGqFRgBGAEl8QLXNm
+				I0HBrv+3fkGSgA7TCQoLb3FSoXCAGqFRgBGAEl8QLXNm
 				dHA6L2NtcGx4c3lzLnczLnV2bS5lZHUvd3d3LXJvb3Qv
 				dGVtcGxhdGVyedoxMgszNDUTNjc4OXc7Ojp7fH1+fwiA
 				IoATgACAAIAggB2AHIAfgB5fECQzMTFDQkREMi05MkI3
 				LTQwMTgtQjA5OC00OEYyOEUwRDA5QUZfEBxvY3RvcHVz
 				X2ljb25fdHJhbnNwYXJlbnQucG5nXxAkMDNBNEMzM0It
 				NjY2MC00MzEyLUFCQjEtREREMTc4NUZGOTEz0kcLhEkj
-				QcGnIksSgROADtMJCguHiVKhiIAhoVGAEYASXxAtc2Z0
+				QcGu/7d+QbOADtMJCguHiVKhiIAhoVGAEYASXxAtc2Z0
 				cDovY21wbHhzeXMudzMudXZtLmVkdS93d3ctcm9vdC90
 				ZW1wbGF0ZXJ5XxBuL3Zhci9mb2xkZXJzLzY2L2hfbnZu
 				eDQ5NWZzX3AwbG14YjdndHBwNDAwMDBncS9UL2NvbS5y
@@ -17240,8 +17330,8 @@
 				ODmQOzo6lJWWl5gIgCqAE4AAgACAKIAlgCSAJ4AmXxAk
 				RUI3QTAwQkEtMjRFMy00NjhCLUI0NTYtOUMyMzdCODBE
 				MEVDW2Zhdmljb24uaWNvXxAkQTU0NUQzNzUtMUI2Qi00
-				RTkzLUJCNTctMTI0RjU3MTIwRkUy0kcLnUkjQcGnIksS
-				gSyADtMJCgugolKhoYApoVGAEYASXxAtc2Z0cDovY21w
+				RTkzLUJCNTctMTI0RjU3MTIwRkUy0kcLnUkjQcGu/7d+
+				QdWADtMJCgugolKhoYApoVGAEYASXxAtc2Z0cDovY21w
 				bHhzeXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0
 				ZXJ5XxBdL3Zhci9mb2xkZXJzLzY2L2hfbnZueDQ5NWZz
 				X3AwbG14YjdndHBwNDAwMDBncS9UL2NvbS5yZWFsbWFj
@@ -17250,7 +17340,7 @@
 				LYAsgC+ALl8QJDQxMTFGQjUyLUEyMkEtNEQ2NS04Njky
 				LUJFNjMwRTZEQ0E2Q18QFGFwcGxlLXRvdWNoLWljb24u
 				cG5nXxAkQUI1MEZENTItQTU0RS00RjIyLTk5NEQtRTE1
-				QTdFRjIyNEEy0kcLtkkjQcGnIksSgYCADtMJCgu5u1Kh
+				QTdFRjIyNEEy0kcLtkkjQcGu/7d+Qe6ADtMJCgu5u1Kh
 				uoAxoVGAEYASXxAtc2Z0cDovY21wbHhzeXMudzMudXZt
 				LmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5XxBmL3Zhci9m
 				b2xkZXJzLzY2L2hfbnZueDQ5NWZzX3AwbG14YjdndHBw
