--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/06-ALIFE-2020/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/06-ALIFE-2020/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-10-09T15:58:24Z</date>
+						<date>2019-10-21T14:59:54Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -79,6 +79,26 @@
 								</data>
 								<key>Size</key>
 								<integer>68310</integer>
+							</dict>
+							<key>files/stacks-image-19dca8a-350x450.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								P8tV4jQfCCzA
+								TfAh4lNIsw==
+								</data>
+								<key>Size</key>
+								<integer>35983</integer>
+							</dict>
+							<key>files/stacks-image-19dca8a-350x450@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								5BdesvlayYZG
+								prgxQfHz2g==
+								</data>
+								<key>Size</key>
+								<integer>61504</integer>
 							</dict>
 							<key>files/stacks-image-1eb6b30.jpg</key>
 							<dict>
@@ -129,6 +149,26 @@
 								</data>
 								<key>Size</key>
 								<integer>76975</integer>
+							</dict>
+							<key>files/stacks-image-4b4af78-350x450.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								P8tV4jQfCCzA
+								TfAh4lNIsw==
+								</data>
+								<key>Size</key>
+								<integer>35983</integer>
+							</dict>
+							<key>files/stacks-image-4b4af78-350x450@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								5BdesvlayYZG
+								prgxQfHz2g==
+								</data>
+								<key>Size</key>
+								<integer>61504</integer>
 							</dict>
 							<key>files/stacks-image-5cba074-350x450.jpg</key>
 							<dict>
@@ -224,31 +264,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								EOTP9t4qHlFf
-								O5dKN/zMAg==
+								874rtjiUigSf
+								GSYzxsn45w==
 								</data>
 								<key>Size</key>
-								<integer>190655</integer>
+								<integer>198216</integer>
 							</dict>
 							<key>files/stacks_page_page64.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								U1uV9MWwegbB
-								O5y1Zqt4XA==
+								S2GtCNhZhV7R
+								WnEIo01FZg==
 								</data>
 								<key>Size</key>
-								<integer>25962</integer>
+								<integer>26144</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								UUZdyMP5kiin
-								SBOI0UdH/w==
+								4F6ywKE9KOQp
+								SKFH56cFdg==
 								</data>
 								<key>Size</key>
-								<integer>117836</integer>
+								<integer>124843</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
