--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/16-Science-Olympiad/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/16-Science-Olympiad/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-10-09T16:10:56Z</date>
+						<date>2019-10-21T14:51:51Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -47,6 +47,16 @@
 								</data>
 								<key>Size</key>
 								<integer>15641164</integer>
+							</dict>
+							<key>files/stacks-image-01e6c7b-250x124.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								xOkCGQePdP5m
+								8H5babBsyQ==
+								</data>
+								<key>Size</key>
+								<integer>10941</integer>
 							</dict>
 							<key>files/stacks-image-67d0f14-248x224.jpg</key>
 							<dict>
@@ -142,11 +152,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								KK81nEdMv24y
-								syXraUBPhQ==
+								FCej/7Zf94jB
+								uyWBgeJEaA==
 								</data>
 								<key>Size</key>
-								<integer>101927</integer>
+								<integer>108257</integer>
 							</dict>
 							<key>files/stacks_page_page71.js</key>
 							<dict>
@@ -162,11 +172,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								n315OJvbSIrX
-								Dlw7nnWRIA==
+								2EWCRsrdJWMb
+								Cq4Ku9l78w==
 								</data>
 								<key>Size</key>
-								<integer>48863</integer>
+								<integer>53399</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
