--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/02-ALIFE-2020/ChildPages/1-ALife-Logistics/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/02-ALIFE-2020/ChildPages/1-ALife-Logistics/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-10-22T16:56:06Z</date>
+						<date>2019-10-23T16:00:07Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -194,8 +194,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								sx18Rp6iaur1
-								IUSNTaEt6w==
+								YnuxjCQZ9Onq
+								sZtURVMyKQ==
 								</data>
 								<key>Size</key>
 								<integer>181871</integer>
@@ -214,11 +214,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								wb75o6cn5/do
-								SgchNcGJYg==
+								RSMCwyyOiEx4
+								U9SHyuB/Vg==
 								</data>
 								<key>Size</key>
-								<integer>104342</integer>
+								<integer>104814</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
