--- a/vermontcomplexsystems-foundation.rw8/Pages/12-003Cheader003ECommunity002B003C002Fheader003E/ChildPages/5-Contact/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/12-003Cheader003ECommunity002B003C002Fheader003E/ChildPages/5-Contact/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-10-22T14:41:22Z</date>
+						<date>2019-10-23T20:57:01Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -114,11 +114,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								FS+Zn54rs8Sw
-								SBS17Sxixw==
+								fiVTMYxfZvis
+								p+ii9TT9Gw==
 								</data>
 								<key>Size</key>
-								<integer>38815</integer>
+								<integer>38822</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
