--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/10-Science-Olympiad/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/10-Science-Olympiad/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-10-23T21:08:51Z</date>
+						<date>2019-10-25T16:10:02Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -152,11 +152,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								FCej/7Zf94jB
-								uyWBgeJEaA==
+								pSyH9HxwkHMq
+								P4yRBUkzhA==
 								</data>
 								<key>Size</key>
-								<integer>108257</integer>
+								<integer>113035</integer>
 							</dict>
 							<key>files/stacks_page_page71.js</key>
 							<dict>
@@ -172,11 +172,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								rI1zHNVwtCsX
-								SyHrvb0ODw==
+								BFNSCvB2GQha
+								NaEjOoxrkQ==
 								</data>
 								<key>Size</key>
-								<integer>53290</integer>
+								<integer>55926</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
