--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/04-Summer-REU/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/04-Summer-REU/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-10-25T17:22:26Z</date>
+						<date>2019-10-25T17:32:01Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -134,11 +134,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Dq8ejzVpmDCj
-								U+yYtlch/w==
+								/Okzr1ysGoEV
+								GyULqnynpA==
 								</data>
 								<key>Size</key>
-								<integer>53016</integer>
+								<integer>52880</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
