--- a/vermontcomplexsystems-foundation.rw8/Pages/08-Partner/ChildPages/1-MassMutual-Center-of-Excellence/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/08-Partner/ChildPages/1-MassMutual-Center-of-Excellence/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-10-25T17:22:27Z</date>
+						<date>2019-10-25T17:36:30Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -402,11 +402,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								GVuJOJEz5e9Z
-								1stnu7lumA==
+								PbDiVyYWqLZ8
+								uLS7XdKsIg==
 								</data>
 								<key>Size</key>
-								<integer>98248</integer>
+								<integer>98062</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
